# kesslerSim

./: .gitignore  BENCHMARK_RESULTS.md  CLAUDE.md  Cargo.toml  Claude-Vacuum chamber for spin launch.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  Makefile  OPTIMIZATION_SESSION.md  QUICK_REFERENCE.md  README.md  TESTING_SUMMARY.md  WASM_TESTING_REPORT.md  build.ps1  build.sh  index.html  netlify.toml  test_helpers.rs  test_results.txt
.cargo/: config.toml
.claude/: settings.local.json
.cursor/plans/: comprehensive_testing_strategy_fbaa6e1e.plan.md
.specstory/history/: 2026-01-02_00-18Z-kessler-simulator-test-compilation-errors.md  2026-01-03_03-38Z-new-branch-with-rust-and-spin-launch.md
assets/shaders/: instanced_rendering.wgsl  orbital_physics.wgsl  point_render.wgsl
assets/tles/: 20250720_active_satellites.tle
benches/: wasm_perf.rs
proptest-regressions/: property_orbital_test.txt
scripts/: dev.ps1
src/: main.rs
src/components/: mod.rs  objects.rs  orbital.rs  physics.rs  trails.rs
src/resources/: constants.rs  mod.rs  recording.rs  simulation.rs
src/systems/: analytics.rs  collision.rs  collision_prediction.rs  data.rs  debris_mechanics.rs  gpu_instancing.rs  gpu_instancing_render.rs  gpu_physics.rs  hud.rs  materials.rs  mod.rs  particles.rs  (+11 more)
tests/: analytics_test.rs  collision_test.rs  data_integration_test.rs  debris_test.rs  gpu_instancing_test.rs  integration_test.rs  lib.rs  physics_test.rs  property_collision_test.rs  property_energy_test.rs  property_orbital_test.rs  sgp4_wrapper_test.rs  tle_parser_test.rs  wasm-test.html  wasm_test.rs
(+9 files in other folders)
